objects/CI_Deposit_Expense__c.object
<CustomObject>
    <description>Expense and Deposit tracking as part of the Loan Pre-Boarding process for the C&amp;I group.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Ref_Number__c</fullName>
        <label>Deposit Ref Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Type__c</fullName>
        <label>Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diligence Deposit</fullName>
                </value>
                <value>
                    <fullName>Legal Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Holding_GL_Account__c</fullName>
        <formula>Opportunity__r.CI_Holding_GL_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding GL Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <formula>Opportunity__r.CI_Loan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Pre_Boarding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <formula>Opportunity__r.CI_Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Received_Account__c</fullName>
        <formula>Opportunity__r.CI_Wire_Received_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wire Received Account #</label>
        <type>Text</type>
    </fields>
    <label>Deposit/Expense</label>
    <nameField>
        <displayFormat>DE-{0000000}</displayFormat>
        <label>Deposit/Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits/Expenses</pluralLabel>
    <recordTypes>
        <fullName>Deposit_Entry</fullName>
        <active>true</active>
        <description>Use this record type for recording Deposit information.</description>
        <label>Deposit Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense_Entry</fullName>
        <active>true</active>
        <description>Use this record type for recording Expense information.</description>
        <label>Expense Entry</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>